fix(protocol-designer): left-align labware text in labware selection modal (#3658)
Closes #3647

--- a/protocol-designer/src/components/LabwareSelectionModal/styles.css
+++ b/protocol-designer/src/components/LabwareSelectionModal/styles.css
@@ -33,6 +33,7 @@
 
 .labware_list_item {
   padding: 0.75rem 1rem;
+  text-align: left;
 }
 
 /* TODO: Ian 2018-07-26 replace these image with some alternative design...
